--- a/customerService/templates/cs.html
+++ b/customerService/templates/cs.html
@@ -9,11 +9,11 @@
 <div class="customerService">
   <div class="container">
     <div class="row align-items-center justify-content-center mt-5" style="height:100%;">
-      <img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px" style="vertical-align: middle;">
-      <span class="align-middle mt-2" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">고객센터</span>
+      <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-4" width="45px" style="vertical-align: middle;">
+      <span class="align-middle mt-2 text-stroke" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">고객센터</span>
     </div>
     <div class="row align-items-center">
-      <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">서비스 문의사항이나 불편한 사항이 있으면 <br>글을 남겨주시면 빠른 시간 내에 답변드리겠습니다.</p>  
+      <p class="text-center col-12 float-center text-stroke" style="font-weight: bold; font-family: 'Noto Sans KR'; color:white; font-size: 20px;">서비스 문의사항이나 불편한 사항이 있으면 <br>글을 남겨주시면 빠른 시간 내에 답변드리겠습니다.</p>  
     </div>
   </div>
 </div>
