--- a/match/templates/league/league_detail.html
+++ b/match/templates/league/league_detail.html
@@ -18,11 +18,11 @@ alert("{{ error }}");
 <div class="league">
   <div class="container">
     <div class="row align-items-center justify-content-center mt-5" style="height:100%;">
-      <img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px" style="vertical-align: middle;">
+      <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-4" width="45px" style="vertical-align: middle;">
       <span class="align-middle mt-2" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">남서울 풋살데이</span>
     </div>
     <div class="row align-items-center">
-      <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">매주 수요일 5시 남서울대 다목적구장에서 풋살 밀어내기가 진행됩니다.</p>  
+      <p class="text-center col-12 float-center text-stroke" style="font-weight: bold; font-family: 'Noto Sans KR'; color:white; font-size: 20px;">매주 수요일 5시 남서울대 다목적구장에서 풋살 밀어내기가 진행됩니다.</p>  
     </div>
   </div>
 </div>
@@ -31,7 +31,7 @@ alert("{{ error }}");
   <div class="container">
     <div class="row">
       <span class="col-md-6 col-12 text-center">Play Football Make Peace</span>
-      <span class="col-md-6 col-12 text-center">풋볼러버 > 밀어내기</span>
+      <span class="col-md-6 col-12 text-center">풋볼러버 > 밀어내기 > 자세히 보기</span>
     </div>
   </div>
 </div>
@@ -78,7 +78,7 @@ alert("{{ error }}");
               </tbody>
             </table>
           </div>
-          <div class="col-md-5 col-12 ml-0" style="border-left:silver 2px solid;">
+          <div class="col-md-5 col-12 ml-0 personalDetail">
               <table class="table">
                 <thead>
                   <tr class="row">
@@ -113,7 +113,7 @@ alert("{{ error }}");
                             <strong class="d-inline-block mb-2 text-info">참가팀</strong><br>
                             {% if attended_teams %}
                             {% for team in attended_teams %}
-                            <button class="btn btn-dark">{{team.team}}</button>
+                            <button class="btn btn-dark"><a class="text-decoration-none text-white" href="{% url 'detail' team.id %}">{{team.team}}</a></button>
                             {% endfor %}
                            {% else %}
                            아직 참가신청한 팀이 없습니다.
@@ -125,7 +125,7 @@ alert("{{ error }}");
                           <strong class="d-inline-block mb-2 text-info">참가인원({{ attended_players.count }}명)</strong><br>
                             {% if attended_players %}
                             {% for player in attended_players %}
-                            <button class="btn btn-dark">{{player.player}}</button>
+                            <button class="btn btn-dark"><a class="text-decoration-none text-white" href="{% url 'myPage' player.player.id %}">{{player.player.name}}</a></button>
                             {% endfor %}
                           {% else %}
                            아직 참가신청한 인원이 없습니다.
@@ -137,9 +137,9 @@ alert("{{ error }}");
                 </table>
                 <hr>
                 <div class="align-items-end">
-                  <a href="{% url 'league' %}"><button type="button" class="btn btn-info col-3">목록으로</button></a>
-                  <a href="{% url 'league_editForm' league.id %}"><button onclick="check()" type="button" class="btn btn-info col-3">수정하기</button></a>
-                  <a href="{% url 'league_delete' league.id %}"><button onclick="return deletePC()" type="button" class="btn btn-info col-3">삭제하기</button></a>
+                  <a href="{% url 'league_editForm' league.id %}"><button onclick="check()" type="button" class="btn btn-info col-3">수정</button></a>
+                  <a href="{% url 'league_delete' league.id %}"><button onclick="return deletePC()" type="button" class="btn btn-info col-3">삭제</button></a>
+                  <a href="{% url 'league' %}"><button type="button" class="btn btn-info col-4">목록으로</button></a>
                 </div>
           </div>
         </div> 
@@ -182,7 +182,7 @@ alert("{{ error }}");
 
 <!-- 댓글 목록 -->
 <div class="container">
-  {% for comment in comments %}
+  {% for comment in commentList %}
   <!-- 댓글 대댓글 전체 래핑 -->
   <div class="commentWrapper">
     <!-- 댓글 래퍼 -->
@@ -194,14 +194,14 @@ alert("{{ error }}");
           <img class="float-right" style="margin-left:10px; border-radius: 70px;" width="35px" height="35px" src="{{ comment.user.userimg.url }}">
           </a>
         </div>
-        <div id = "{{comment.id}}" class="col-sm-10 col-9">
+        <div id = "{{comment.id}}" class="col-sm-10 col-8">
           <h6 class="media-heading user_name">
           <strong>{{ comment.user }}</strong> 
           | {{comment.passedTime}}
           </h6>
           <h6>{{ comment.content }}</h6>
         </div>
-        <div class="btn-group col-1">
+        <div class="btn-group col-md-1 col-2">
           <button type="button" class="btn btn-light dropdown-toggle" style="color:white !important; border:none !important; background-color: white !important;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="far fa-caret-square-down" style="color: black !important;"></i>
           </button>
@@ -251,7 +251,7 @@ alert("{{ error }}");
   <div class="replyAll">
     <!-- 답글쓰기 -->
     <div class="row writeReply" id = write>
-      <div class="col-md-1 col-3">
+      <div class="col-md-1 col-2">
           <i class="fas fa-arrow-alt-circle-right float-right" style="width:35px; height:35px; padding-top:10px;"></i>
       </div>
       <div class="col-1">
@@ -282,7 +282,7 @@ alert("{{ error }}");
     <div class="replyWrapper" id = replyWrapper>
     <!-- replyDetail -->
       <div class="row replyDetail">
-        <div class="col-md-1 col-3">
+        <div class="col-md-1 col-2">
             <i class="fas fa-arrow-alt-circle-right float-right" style="width:35px; height:35px; padding-top:10px;"></i>
         </div>
         <div class="col-1">
@@ -314,7 +314,7 @@ alert("{{ error }}");
 
       <!-- replyEditForm -->
       <div class="row replyEditForm">
-        <div class="col-md-1 col-3">
+        <div class="col-md-1 col-2">
             <i class="fas fa-arrow-alt-circle-right float-right" style="width:35px; height:35px; padding-top:10px;"></i>
         </div>
         <div class="col-1">
@@ -352,7 +352,31 @@ alert("{{ error }}");
     <!--답글 끝  -->
   {% endfor %}
 </div>
-
+ <!-- 댓글 페이지네이션 -->
+ <nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+      {% if commentList.has_previous %}
+      <li class="page-item">
+        <a class="page-link" href="?page=1" tabindex="-1" aria-disabled="true">처음으로</a>
+      </li>
+      <li class="page-item">
+        <a class="page-link" href="?page={{commentList.previous_page_number}}" tabindex="-1" aria-disabled="true">{{commentList.previous_page_number}}</a>
+      </li>
+      {% endif %}
+      
+      <li class="page-item disabled"><a class="page-link" href="#">{{commentList.number}}</a></li>
+      {% if commentList.has_next %}
+      <li class="page-item">
+        <a class="page-link" href="?page={{commentList.next_page_number}}">{{commentList.next_page_number}}</a>
+      </li>
+      <li class="page-item">
+        <a class="page-link" href="?page={{commentList.paginator.num_pages}}">마지막으로</a>
+      </li>
+      {% endif %}
+    </ul>
+  </nav>
+    <!-- 댓글 페이지네이션 끝 -->
+      
 </div>
 <script type="text/javascript">
   function deletePC(){
