--- a/match/templates/recruiting/recruiting_detail.html
+++ b/match/templates/recruiting/recruiting_detail.html
@@ -18,11 +18,11 @@ alert("{{ error }}");
 <div class="recruiting">
   <div class="container">
     <div class="row align-items-center justify-content-center mt-5" style="height:100%;">
-      <img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px" style="vertical-align: middle;">
-      <span class="align-middle mt-2" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">용병모집</span>
+      <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-4" width="45px" style="vertical-align: middle;">
+      <span class="align-middle mt-2 text-stroke" style="font-family: 'Do Hyeon'; font-size: 45px; color:lightsalmon;">용병모집</span>
     </div>
     <div class="row align-items-center">
-      <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">축구 혹은 풋살 용병을 구합니다.</p>  
+      <p class="text-center col-12 float-center text-stroke" style="font-weight: bold; font-family: 'Noto Sans KR'; color:white; font-size: 20px;">축구 혹은 풋살 용병을 구합니다.</p>  
     </div>
   </div>
 </div>
@@ -57,7 +57,7 @@ alert("{{ error }}");
                   <tr class="row">
                       <th scope="row" class="col-4">주최자</th>
                       <td style="text-align: left;" class="col-8">
-                      {{recruiting.user}}    
+                      <a href="{% url 'myPage' recruiting.user.id %}" class="text-decoration-none" style="color:blue;"><b>{{recruiting.user}}</b></a>    
                       </td>
                   </tr>
                   <tr class="row">
@@ -101,7 +101,7 @@ alert("{{ error }}");
                 </tbody>
               </table>
             </div>
-            <div class="col-md-5 col-12 ml-0" style="border-left:silver 2px solid;">
+            <div class="col-md-5 col-12 ml-0 personalDetail">
                 <table class="table">
                   <thead>
                     <tr class="row">
@@ -135,7 +135,7 @@ alert("{{ error }}");
                              <strong class="d-inline-block mb-2 text-warning">참여인원</strong><br>
                              {% if accepted_players %}
                              {% for player in accepted_players %}
-                             <button class="btn btn-warning">{{player}}</button>
+                             <button class="btn btn-warning"><a class="text-decoration-none" style="color:black;" href="{% url 'myPage' player.id %}">{{player.name}}</a></button>
                              {% endfor %}
                              {% else %}
                              아직 참여확정된 인원이 없습니다.
@@ -147,7 +147,7 @@ alert("{{ error }}");
                             <strong class="d-inline-block mb-2 text-warning">참가신청인원</strong><br>
                             {% if applied_players %}
                             {% for player in applied_players %}
-                            <button class="btn btn-warning">{{player}}</button>
+                            <button class="btn btn-warning"><a class="text-decoration-none" style="color:black;" href="{% url 'myPage' player.id %}">{{player.name}}</a></button>
                             {% endfor %}
                             {% else %}
                              아직 참가신청한 인원이 없습니다.
@@ -164,9 +164,9 @@ alert("{{ error }}");
                   </table>
                   <hr>
                   <div class="align-items-end">
-                    <a href="{% url 'recruiting' %}"><button type="button" class="btn btn-warning col-3">목록으로</button></a>
-                    <a href="{% url 'recruiting_editForm' recruiting.id %}"><button onclick="check()" type="button" class="btn btn-warning col-3">수정하기</button></a>
-                    <a href="{% url 'recruiting_delete' recruiting.id %}"><button onclick="return deletePC()" type="button" class="btn btn-warning col-3">삭제하기</button></a>
+                    <a href="{% url 'recruiting_editForm' recruiting.id %}"><button onclick="check()" type="button" class="btn btn-warning col-3">수정</button></a>
+                    <a href="{% url 'recruiting_delete' recruiting.id %}"><button onclick="return deletePC()" type="button" class="btn btn-warning col-3">삭제</button></a>
+                    <a href="{% url 'recruiting' %}"><button type="button" class="btn btn-warning col-4">목록으로</button></a>
                   </div>
             </div>
              </div> 
@@ -210,7 +210,7 @@ alert("{{ error }}");
 
   <!-- 댓글 목록 -->
   <div class="container">
-    {% for comment in comments %}
+    {% for comment in commentList %}
     <!-- 댓글 대댓글 전체 래핑 -->
     <div class="commentWrapper">
       <!-- 댓글 래퍼 -->
@@ -222,14 +222,14 @@ alert("{{ error }}");
             <img class="float-right" style="margin-left:10px; border-radius: 70px;" width="35px" height="35px" src="{{ comment.user.userimg.url }}">
             </a>
           </div>
-          <div id = "{{comment.id}}" class="col-sm-10 col-9">
+          <div id = "{{comment.id}}" class="col-sm-10 col-8">
             <h6 class="media-heading user_name">
             <strong>{{ comment.user }}</strong> 
             | {{comment.passedTime}}
             </h6>
             <h6>{{ comment.content }}</h6>
           </div>
-          <div class="btn-group col-1">
+          <div class="btn-group col-2 col-md-1">
             <button type="button" class="btn btn-light dropdown-toggle" style="color:white !important; border:none !important; background-color: white !important;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="far fa-caret-square-down" style="color: black !important;"></i>
             </button>
@@ -279,7 +279,7 @@ alert("{{ error }}");
     <div class="replyAll" id="test1">
       <!-- 답글쓰기 -->
       <div class="row writeReply" id = write>
-        <div class="col-md-1 col-3">
+        <div class="col-md-1 col-2">
             <i class="fas fa-arrow-alt-circle-right float-right" style="width:35px; height:35px; padding-top:10px;"></i>
         </div>
         <div class="col-1">
@@ -310,7 +310,7 @@ alert("{{ error }}");
       <div class="replyWrapper" id = replyWrapper>
       <!-- replyDetail -->
         <div class="row replyDetail">
-          <div class="col-md-1 col-3">
+          <div class="col-md-1 col-2">
               <i class="fas fa-arrow-alt-circle-right float-right" style="width:35px; height:35px; padding-top:10px;"></i>
           </div>
           <div class="col-1">
@@ -342,7 +342,7 @@ alert("{{ error }}");
 
         <!-- replyEditForm -->
         <div class="row replyEditForm">
-          <div class="col-md-1 col-3">
+          <div class="col-md-1 col-2">
               <i class="fas fa-arrow-alt-circle-right float-right" style="width:35px; height:35px; padding-top:10px;"></i>
           </div>
           <div class="col-1">
@@ -380,7 +380,31 @@ alert("{{ error }}");
       <!--답글 끝  -->
     {% endfor %}
   </div>
-
+ <!-- 댓글 페이지네이션 -->
+ <nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+      {% if commentList.has_previous %}
+      <li class="page-item">
+        <a class="page-link" href="?page=1" tabindex="-1" aria-disabled="true">처음으로</a>
+      </li>
+      <li class="page-item">
+        <a class="page-link" href="?page={{commentList.previous_page_number}}" tabindex="-1" aria-disabled="true">{{commentList.previous_page_number}}</a>
+      </li>
+      {% endif %}
+      
+      <li class="page-item disabled"><a class="page-link" href="#">{{commentList.number}}</a></li>
+      {% if commentList.has_next %}
+      <li class="page-item">
+        <a class="page-link" href="?page={{commentList.next_page_number}}">{{commentList.next_page_number}}</a>
+      </li>
+      <li class="page-item">
+        <a class="page-link" href="?page={{commentList.paginator.num_pages}}">마지막으로</a>
+      </li>
+      {% endif %}
+    </ul>
+  </nav>
+    <!-- 댓글 페이지네이션 끝 -->
+      
 </div>
   <script type="text/javascript">
     function deletePC(){
