--- a/account/templates/findPw.html
+++ b/account/templates/findPw.html
@@ -3,11 +3,16 @@
         <head>
                 <meta charset="utf-8">
                 <title>FNS Login</title>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
+
+                <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/blog/">
+                <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+                <!-- Jquery CDN -->
                 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
                 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
                 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
                 <!-- Bootstrap core CSS -->
                 <link href="/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
             
@@ -117,6 +122,7 @@
                         font-size:13px;
                 }
         </style>
+
         </head>
         <body>
             {% if errormessage %}
@@ -134,12 +140,12 @@
                 </div>
     
                 <div class = "txtb">
-                        <input type="text" id="phone_number" name="phone_number" placeholder="휴대폰 번호를 입력해주세요.">
+                        <input type="text" id="phone_number" name="phone_number" maxlength="11" placeholder="휴대폰 번호를 입력해주세요.">
                         <span></span>
                 </div>
                 <button id="sendSMS" type="button" class="logbtn">인증번호 발송</button>
                 <div class = "txtb">
-                        <input type="text" name="auth_number" id="auth_number" placeholder="인증번호를 입력해주세요.">
+                        <input type="text" maxlength="5" name="auth_number" id="auth_number" placeholder="인증번호를 입력해주세요.">
                         <span></span>
                 </div>
                 <button id="checkSMS" type="button" class="logbtn" style="margin-bottom: 10px;">인증하기</button>
@@ -169,25 +175,44 @@
                 $(this).removeClass("focus"); 
         });
 
-        $('#sendSMS').click( function() {
+$('#sendSMS').click( function() {
         url1 = "{% url 'verification' %}";
         var csrf = $('input[name="csrfmiddlewaretoken"]').first().val();  
         var findPw = 'findPw';
+        var username = $('#username').val();
+        url2 = "{% url 'checkPhone_number' %}";
         $.ajax({
-            url: url1,
-            dataType:'json',
+            url: url2,
+            dataType:'JSON',
             type:'POST',
-            data:{'phone_number':$('#phone_number').val(), 'csrfmiddlewaretoken':csrf, 'findPw':findPw},
+            async:false,
+            data:{'csrfmiddlewaretoken':'{{ csrf_token }}', 'phone_number':$('#phone_number').val(), 'username':username},
             success:function(data){
-                if(data.message == '문자 메시지를 보냈습니다.'){
-                    alert(data.message);
-                    document.getElementById('auth_number').focus();
+                if(data.message == 'True'){
+                       $.ajax({
+                        url: url1,
+                        dataType:'json',
+                        async:false,
+                        type:'POST',
+                        data:{'phone_number':$('#phone_number').val(), 'csrfmiddlewaretoken':'{{ csrf_token }}', 'findPw':findPw},
+                        success:function(data){
+                                if(data.message == '문자 메시지를 보냈습니다.'){
+                                        alert(data.message);
+                                        document.getElementById('auth_number').focus();
                     
+                                }else{
+                                        alert(data.message);
+                                }  
+                        },
+                        });
                 }else{
                     alert(data.message);
                 }  
             },
+            
         });
+
+        
     })
 
     $('#checkSMS').click( function() {
@@ -218,19 +243,59 @@
             }
         });
     })
-
-function formCheck(obj){
-    var checkSMS = document.getElementById('checkSMS');
-    var sendSMS = document.getElementById('sendSMS');
-    
-    if($('#checkSMS').text()!='인증완료'){
-        alert('인증을 해주세요.');
+function check(re, what, message) {
+        if(re.test(what.value)) {
+                return true;
+        }
+        alert(message);
+        what.value = "";
+        what.focus();
         return false;
-    }
 }
+
+function formCheck(frm){
+        var checkSMS = document.getElementById('checkSMS');
+        var sendSMS = document.getElementById('sendSMS');
+        var pwCheck = /^(?=.*[a-zA-Z])(?=.*[!@#$%^*+=-])(?=.*[0-9]).{8,15}$/; // 비밀번호 검사할 정규식
+        var idCheck = /^[a-zA-Z0-9]{8,15}$/; // 아이디가 적합한지 검사할 정규식
+        var phoneCheck = /^[0-9]{11}$/;
+        var authCheck = /^[0-9]{5}$/;
+        var username = document.getElementById("username");;
+        var phone_number = document.getElementById("phone_number");
+        var auth_number = document.getElementById("auth_number");
+
+        if(frm.username.value == ""){
+                alert("아이디를 입력해주세요");
+                frm.username.focus();
+                return false;
+        }
+        if(frm.phone_number.value == ""){
+                alert("휴대폰 번호를 입력해주세요");
+                frm.phone_number.focus();
+                return false;
+        }
+        if(!(check(phoneCheck, phone_number, "휴대폰번호는 '-'없이 11자리를 적어주세요"))){
+                frm.phone_number.focus();
+                return false;
+        }
+        if(frm.auth_number.value == ""){
+                alert("인증 번호를 입력해주세요");
+                frm.auth_number.focus();
+                return false;
+        }
+        if(!(check(authCheck, auth_number, "인증번호는 숫자로 5자리를 적어주세요"))){
+                frm.auth_number.focus();
+                return false;
+        }
+        
+        if($('#checkSMS').text()!='인증완료'){
+                alert('인증을 해주세요.');
+                return false;
+        }
+        }
         </script>
         </body>
-    </html>
+</html>
     
     
     
