--- a/customerService/templates/csEdit.html
+++ b/customerService/templates/csEdit.html
@@ -39,11 +39,11 @@ function formCheck(frm){
 <div class="customerService">
   <div class="container">
     <div class="row align-items-center justify-content-center mt-5" style="height:100%;">
-      <img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px" style="vertical-align: middle;">
-      <span class="align-middle mt-2" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">고객센터</span>
+      <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-4" width="45px" style="vertical-align: middle;">
+      <span class="align-middle mt-2 text-stroke" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">고객센터</span>
     </div>
     <div class="row align-items-center">
-      <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">서비스 문의사항이나 불편한 사항이 있으면 <br>글을 남겨주시면 빠른 시간 내에 답변드리겠습니다.</p>  
+      <p class="text-center col-12 float-center text-stroke" style="font-weight: bold; font-family: 'Noto Sans KR'; color:white; font-size: 20px;">서비스 문의사항이나 불편한 사항이 있으면 <br>글을 남겨주시면 빠른 시간 내에 답변드리겠습니다.</p>  
     </div>
   </div>
 </div>
@@ -65,27 +65,27 @@ function formCheck(frm){
         <form name="frm" id="frm" action="{% url 'csEdit' cs.id %}"  onsubmit="return formCheck(this);" method="POST">
             {% csrf_token %}
             <div class="form-group row">
-                <label class="col-2 col-md-1 col-form-label" for="title">제목</label>
-                <div class="col-10 col-md-11">
+                <label class="col-12 col-md-1 col-form-label" for="title">제목</label>
+                <div class="col-12 col-md-11">
                 <input class="form-control" id="title" type="text" name = "title" placeholder="제목을 입력하세요.(50자 내외)" value="{{cs.title}}">
                 </div>
             </div>
             <div class="form-group row">
-                <label class="col-2 col-md-1 col-form-label" for="user">작성자</label>
-                <div class="col-10 col-md-11">
+                <label class="col-12 col-md-1 col-form-label" for="user">작성자</label>
+                <div class="col-12 col-md-11">
                 <input class="form-control" id="user" type="text" name = "user" value="{{fnsuser.name}}" disabled>
                 </div>
             </div>
             <div class="form-group row">
-                <label class="col-2 col-md-1 col-form-label" for="email">이메일</label>
-                <div class="col-10 col-md-11">
+                <label class="col-12 col-md-1 col-form-label" for="email">이메일</label>
+                <div class="col-12 col-md-11">
                 <input class="form-control" id="email" type="text" name = "email" value="{{fnsuser.email}}" disabled>
                 </div>
             </div>
     
             <div class="form-group row">
-                <label class="col-md-1 col-2 col-form-label" for="content">내용</label>
-                <div class="col-md-11 col-10">
+                <label class="col-md-1 col-12 col-form-label" for="content">내용</label>
+                <div class="col-md-11 col-12">
                 <textarea class="form-control" id="content" name="content" rows="5" placeholder="내용을 입력하세요.(1000자 내외)">{{cs.content}}</textarea>
                 </div>
             </div>
