--- a/decidedMatch/templates/decidedDetail.html
+++ b/decidedMatch/templates/decidedDetail.html
@@ -24,11 +24,11 @@ alert("{{ message }}")
 <div class="decidedMatch">
         <div class="container">
           <div class="row align-items-center justify-content-center mt-5" style="height:100%;">
-            <img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px" style="vertical-align: middle;">
-            <span class="align-middle mt-2" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">풋볼러버 일정</span>
+            <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-4" width="45px" style="vertical-align: middle;">
+            <span class="align-middle mt-2 text-stroke" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">풋볼러버 일정</span>
           </div>
           <div class="row align-items-center">
-            <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">매칭이 확정된 경기의 일정을 알려드립니다. <br>경기 후 결과를 입력해주세요.</p>  
+            <p class="text-center col-12 float-center text-stroke" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">매칭이 확정된 경기의 일정을 알려드립니다. <br>경기 후 결과를 입력해주세요.</p>  
           </div>
         </div>
       </div>
@@ -47,11 +47,11 @@ alert("{{ message }}")
 <div class="container mt-4 mb-4 pl-4 pr-4">
     <div class="row justify-content-center bd-highlight" 
     style="padding-top: 30px; padding-bottom:30px; border-top:lightslategrey solid 1px; border-bottom:lightslategrey solid 1px;">
-        <div class="col-4 col-md-3 d-flex align-items-center justify-content-center">
+        <div class="col-8 col-md-3 d-flex align-items-center justify-content-center">
             <img class="float-left mr-lg-4 d-none d-lg-block" src="{{ decidedMatch.myTeam.teamimg.url }}" style="border-radius:70px;" width="50px;" height="50px;">
             <span style="font-size:30px;" class="doHyeon">{{decidedMatch.myTeam}}</span>
         </div>
-        <div class="col-1 col-md-2 d-flex align-items-center justify-content-center">
+        <div class="col-4 col-md-2 d-flex align-items-center justify-content-center">
             {% if not decidedMatch.result.myTeamScore %}
             <span class="float-right" style="font-size: 40px; color:#A3F952; margin-left: 10px;"><strong>0</strong></span>
             {% else %}
@@ -61,7 +61,7 @@ alert("{{ message }}")
 
             {% endif %}
         </div>
-        <div class="col-2 d-flex align-items-center justify-content-center">
+        <div class="col-md-2 col-12 my-2 d-flex align-items-center justify-content-center">
             <button style="background-color: #2D2D2D; border:none; box-shadow: 2px 2px 2px 2px gray;">
                 {% if state == 'before' %}
                 <span style="font-size: 20px; color: #FFF599;" class="doHyeon">경기전</span>
@@ -72,7 +72,7 @@ alert("{{ message }}")
                 {% endif %}
             </button>
         </div>
-        <div class="col-1 col-md-2 d-flex align-items-center justify-content-center">
+        <div class="col-4 col-md-2 d-flex align-items-center justify-content-center">
             {% if not decidedMatch.result.vsTeamScore %}
             <span style="font-size: 40px; color:#A3F952; margin-right: 10px;"><strong>0</strong></span>
             {% else %}
@@ -84,7 +84,7 @@ alert("{{ message }}")
             {% endif %}
             
         </div>
-        <div class="col-4 col-md-3 d-flex align-items-center justify-content-center">
+        <div class="col-8 col-md-3 d-flex align-items-center justify-content-center">
             <span style="font-size:30px;" class="doHyeon">{{decidedMatch.vsTeam}}</span>
             <img class="ml-lg-4 d-none d-lg-block" src="{{ decidedMatch.vsTeam.teamimg.url }}" style="border-radius:70px;" width="40px;" height="40px;">
         </div>
@@ -190,7 +190,7 @@ alert("{{ message }}")
                 {% if decidedMatch.myTeam.teamleader == fnsuser or decidedMatch.vsTeam.teamleader == fnsuser %}
                 <a href="{% url 'input' decidedMatch.id %}"><button class="btn btn-secondary">결과입력</button></a>
                 {% else %}
-                <p style="padding-top: 6px; margin-right:5px;">팀대표만 입력할 수 있습니다.</p>
+                <p style="padding-top: 6px; margin-right:5px;">(결과는 팀대표만 입력할 수 있습니다.)</p>
                 {% endif %}
        
         
