--- a/decidedMatch/templates/decidedMatch.html
+++ b/decidedMatch/templates/decidedMatch.html
@@ -24,11 +24,11 @@ alert("{{ message }}")
 <div class="decidedMatch">
         <div class="container">
           <div class="row align-items-center justify-content-center mt-5" style="height:100%;">
-            <img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px" style="vertical-align: middle;">
-            <span class="align-middle mt-2" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">풋볼러버 일정</span>
+            <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-4" width="45px" style="vertical-align: middle;">
+            <span class="align-middle mt-2 text-stroke" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">풋볼러버 일정</span>
           </div>
           <div class="row align-items-center">
-            <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">매칭이 확정된 경기의 일정을 알려드립니다. <br>경기 후 결과를 입력해주세요.</p>  
+            <p class="text-center col-12 float-center text-stroke" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">매칭이 확정된 경기의 일정을 알려드립니다. <br>경기 후 결과를 입력해주세요.</p>  
           </div>
         </div>
       </div>
@@ -59,6 +59,7 @@ alert("{{ message }}")
       <script>
         var i = 0; 
       </script>
+      {% if matches %}
       {% for match in matches %}
       <script>
         i += 1;
@@ -85,10 +86,17 @@ alert("{{ message }}")
         </td>
         
       </tr>
+      {% endfor %}
+      {% else %}
+      <tr class="row">
+        <td colspan="6">
+          아직 확정된 경기가 없습니다.
+        </td>
+      </tr>
+      {% endif %}
     </tbody>
-    {% endfor %}
-   
 </table>
+<hr class="my-3">
 <nav aria-label="Page navigation example">
     <ul class="pagination justify-content-center">
         {% if matchList.has_previous %}
