--- a/match/templates/home.html
+++ b/match/templates/home.html
@@ -2,7 +2,11 @@
 {% block contents %}
 {% load staticfiles %}
 
-
+{% if errormessage %}
+<script>
+alert("{{errormessage}}");
+</script>
+{% endif %}
 <!-- 사진 -->
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -33,16 +37,16 @@
 <!-- 사진 끝 -->
 
 <!-- 풋볼러버 소식 & 정보 -->
-<div class="information">
-  <div class="title container">
+<div class="information p-0 p-md-5">
+  <div class="title container mb-3">
     <div class="d-flex justify-content-center">
-      <a href="{% url 'home' %}"><img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px"></a>
-      <h1 class="text-align-center mt-3" style="text-align: center; font-family: 'Do Hyeon'; color:blanchedalmond;">풋볼러버 소식</h1>
+      <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-2 mt-2" width="40px" height="40px">
+      <h1 class="text-align-center mt-2" style="text-align: center; font-family: 'Do Hyeon'; color:blanchedalmond;">풋볼러버 소식</h1>
     </div>
     <p class="text-center" style="font-family: 'Noto Sans KR'; color:white;">풋볼러버에서 진행중인 다양한 소식과 정보를 안내합니다.</p>
   </div>
-    <div class="row">
-      <div class="col-md-6 col-12 " style="height: 50%;">
+    <div class="row mt-4 mx-1">
+      <div class="col-md-6 col-12" style="height: 50%;">
         <div class="futsalDay row no-gutters border rounded overflow-hidden mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-3 d-flex flex-column position-static mt-0">
             <div style="border-bottom: rgb(0, 0, 0) 1px solid;" class="row mb-2">
@@ -54,24 +58,23 @@
               </div>
             </div>
             <h4 class="mb-2 font-weight-bold row">
-              <strong class="col-md-2 col-12">제목 |</strong>
-            <span class="col-md-10 col-12 font-weight-bold">{{league.title}}</span>
+              <span class="col">제목 | {{league.title}}</span>
             </h4>
             <h4 class="row">
-              <strong class="col-md-2 col-12">장소 |</strong>
-              <span class="col-md-10 col-12">
-                {{league.location}}
+              <span class="col"><strong>장소 |</strong>
+                <span style="font-size: 18px;">{{league.location}}</span>
               </span>
             </h4>
             <h4 class="row">
-              <strong class="col-md-2 col-12">시간    |</strong>
-              <span class="col-md-10 col-12" style="color:red;"><b>
-                {% autoescape on %}
+                <span class="col"><strong>시간 |</strong>
+                  {% autoescape on %}
+                  <span style="color:red; font-size: 18px;">
                   {{league.time_from|date:"m월d일 H:00"}} -
                   {{league.time_to|date:"H:00"}}
+                </span>
                 {% endautoescape %}
-              </b></span>
-            </h4>
+                </span>
+              </h4>
             <p class="card-text pt-3" style="border-top:black 1px solid;">{{league.summary}}
               {% if league %}
               <a href="{% url 'league_detail' league.id %}" class="text-decoration-none stretched-link">...자세히 보기</a>
@@ -92,29 +95,28 @@
                   <strong class="d-inline-block mb-2" style="color:white; font-size: 30px; background-color: coral; padding:5px;">공지사항</strong>
                 </div>
                 <div class="col-md-9 col-12">
-                  <strong class="d-inline-block mb-2 text-info float-left" style="font-size: 30px; padding:5px;">남서울 풋살데이</strong>
+                  <strong class="d-inline-block mb-2 text-info float-left" style="font-size: 30px; padding:5px;">하이라이트</strong>
                 </div>
               </div>
               <h4 class="mb-2 font-weight-bold row">
-                <strong class="col-md-2 col-12">제목 |</strong>
-              <span class="col-md-10 col-12 font-weight-bold">{{league.title}}</span>
-              </h4>
-              <h4 class="row">
-                <strong class="col-md-2 col-12">장소 |</strong>
-                <span class="col-md-10 col-12">
-                  {{league.location}}
-                </span>
-              </h4>
-              <h4 class="row">
-                <strong class="col-md-2 col-12">시간    |</strong>
-                <span class="col-md-10 col-12" style="color:red;"><b>
-                  {% autoescape on %}
-                    {{league.time_from|date:"m월d일 H:00"}} -
-                    {{league.time_to|date:"H:00"}}
-                  {% endautoescape %}
-                </b></span>
-              </h4>
-              <p class="card-text pt-3" style="border-top:black 1px solid;">{{league.summary}}
+                  <span class="col">제목 | 풋살데이 하이라이트</span>
+                </h4>
+                <h4 class="row">
+                  <span class="col"><strong>장소 |</strong>
+                    <span style="font-size: 18px;">{{league.location}}</span>
+                  </span>
+                </h4>
+                <h4 class="row">
+                    <span class="col"><strong>시간 |</strong>
+                      {% autoescape on %}
+                      <span style="color:red; font-size: 18px;">
+                      {{league.time_from|date:"m월d일 H:00"}} -
+                      {{league.time_to|date:"H:00"}}
+                    </span>
+                    {% endautoescape %}
+                    </span>
+                  </h4>
+              <p class="card-text pt-3" style="border-top:black 1px solid;">동영상 준비 중입니다.
                 {% if league %}
                 <a href="{% url 'league_detail' league.id %}" class="text-decoration-none stretched-link">...자세히 보기</a>
                 {% else %}
@@ -131,12 +133,13 @@
 <!-- 풋볼러버 소식 & 정보 끝-->
 
 <!-- 일정 -->
-<div class="schedule">
+<div class="schedule p-0 p-md-5">
   <div class="container">
   <div class="title">
     <div class="d-flex justify-content-center">
-      <a href="{% url 'home' %}"><img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px"></a>
-      <h1 class="text-align-center mt-3" style="text-align: center; font-family: 'Do Hyeon'; color:white;">풋볼러버 오늘의 경기</h1>
+        <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mt-2 mr-1" width="40px" height="40px">
+      <h1 class="text-align-center mt-2 d-none d-md-block" style="text-align: center; font-family: 'Do Hyeon'; color:white;">풋볼러버 오늘의 경기</h1>
+      <h1 class="text-align-center mt-2 d-block d-md-none" style="text-align: center; font-family: 'Do Hyeon'; color:white;">오늘의 경기</h1>
     </div>
     <p class="text-center" style="font-family: 'Noto Sans KR'; color:white;">풋볼러버에서 진행중인 다양한 소식과 정보를 안내합니다.</p>
   </div>
@@ -144,11 +147,13 @@
   <article class="mt-4 col-12 col-md-5 mr-0">
       <table id="calendar" boarder="3" text-align="center" style="padding:4em;">
           <tr>
-              <td><label onclick="prevCalendar()"><</label></td>
-                 <td colspan="5" text-align="center" id="calendarYM" style="font-family: 'Do Hyeon';">yyyy년 m월</td>
-                 <td><label onclick="nextCalendar()">>
-                    
-                 </label></td>
+              <td>
+                <!-- <label onclick="prevCalendar()"><</label> -->
+              </td>
+              <td colspan="5" text-align="center" id="calendarYM" style="font-family: 'Do Hyeon';">yyyy년 m월</td>
+              <td>
+                <!-- <label onclick="nextCalendar()">></label> -->
+              </td>
              </tr>
              <tr style="border-bottom: 1px solid #23262E;">
               <td text-align="center">일</td>
