--- a/match/templates/league/league_new.html
+++ b/match/templates/league/league_new.html
@@ -23,6 +23,33 @@ alert("{{errormessage}}");
                    frm.time_from.focus();
                    return false;
                }
+               if(Number(matchYear) < year){
+                    alert("현재시간보다 이전 시간을 선택하실 수 없습니다.")
+                    frm.time_from.focus();
+                    return false;
+                }
+                else{
+                    if(Number(matchMonth) < month){
+                        alert("현재시간보다 이전 시간을 선택하실 수 없습니다.")
+                        frm.time_from.focus();
+                        return false;
+                    }
+                    else{ 
+                        if(Number(matchDate) < date){
+                            alert("현재시간보다 이전 시간을 선택하실 수 없습니다.")
+                            frm.time_from.focus();
+                            return false;
+                        }
+                        else if(Number(matchDate) == date){
+                            if(Number(matchHour) <= hour){
+                                alert("matchhour :" + matchHour + "hour :" + hour);
+                                alert("현재시간보다 이전 시간을 선택하실 수 없습니다.")
+                                frm.time_from.focus();
+                                return false;
+                            }
+                        } 
+                   }
+                }
                if (frm.time_to.value == ""){
                    alert("종료시간을 입력해주세요");
                    frm.time_to.focus();
@@ -39,11 +66,11 @@ alert("{{errormessage}}");
 <div class="league">
   <div class="container">
     <div class="row align-items-center justify-content-center mt-5" style="height:100%;">
-      <img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px" style="vertical-align: middle;">
+      <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-4" width="45px" style="vertical-align: middle;">
       <span class="align-middle mt-2" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">남서울 풋살데이</span>
     </div>
     <div class="row align-items-center">
-      <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">매주 수요일 5시 남서울대 다목적구장에서 풋살 밀어내기가 진행됩니다.</p>  
+      <p class="text-center col-12 float-center text-stroke" style="font-weight: bold; font-family: 'Noto Sans KR'; color:white; font-size: 20px;">매주 수요일 5시 남서울대 다목적구장에서 풋살 밀어내기가 진행됩니다.</p>  
     </div>
   </div>
 </div>
@@ -80,11 +107,11 @@ alert("{{errormessage}}");
         <div class="form-group row">
             <label class="col-lg-2 col-sm-12 col-form-label" for="time_from">시작시간</label>
             <div class="col-lg-3 col-sm-12">
-            <input id="time_from" name = "time_from" class="form-control" type="text">
+            <input id="time_from" name = "time_from" class="form-control" type="text" readonly autocomplete="off">
             </div>
             <label class="col-lg-2 col-sm-12 col-form-label" for="time_to">종료시간</label>
             <div class="col-lg-3 col-sm-12">
-            <input id="time_to" name = "time_to" type="text" class="form-control">
+            <input id="time_to" name = "time_to" type="text" class="form-control" readonly autocomplete="off">
             </div>
         </div>
         <div class="form-group row">
