--- a/match/templates/personal_detail.html
+++ b/match/templates/personal_detail.html
@@ -10,7 +10,7 @@ $(document).ready(function(event) {
           $.ajax({
             type: 'POST',
             url: '{% url "personal_attendance" %}',
-            data: {'id':pk, 'csrfmiddlewaretoken': '{{ csrftoken }}' },
+            data: {'id':pk, 'csrfmiddlewaretoken': '{{ csrf_token }}' },
             dataType: 'json',
             success: function(response){ 
               $('#attendance_section').html(response['form']) 
@@ -49,11 +49,11 @@ $(document).ready(function(event) {
 <div class="personalMatching">
         <div class="container">
           <div class="row align-items-center justify-content-center mt-5" style="height:100%;">
-            <img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px" style="vertical-align: middle;">
+            <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-4" width="45px" style="vertical-align: middle;">
             <span class="align-middle mt-2" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">개인매칭</span>
           </div>
           <div class="row align-items-center">
-            <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">같이 축구하거나 풋살할 사람을 구합니다!</p>  
+            <p class="text-center col-12 float-center text-stroke" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">같이 축구하거나 풋살할 사람을 구합니다!</p>  
           </div>
         </div>
       </div>
@@ -90,7 +90,8 @@ $(document).ready(function(event) {
           <tr class="row">
               <th scope="row" class="col-4">주최자</th>
               <td style="text-align: left;" class="col-8">
-              {{personalMatching.user}}    
+              <a href="{% url 'myPage' personalMatching.user.id %}" class="text-decoration-none" 
+              style="color: blue;"><b>{{personalMatching.user}}</b></a>    
               </td>
           </tr>
           <tr class="row">
@@ -124,7 +125,7 @@ $(document).ready(function(event) {
         </tbody>
       </table>
     </div>
-    <div class="col-md-5 col-12 ml-0" style="border-left:silver 2px solid;">
+    <div class="col-md-5 col-12 ml-0 personalDetail">
         <table class="table">
           <thead>
             <tr class="row">
@@ -168,9 +169,9 @@ $(document).ready(function(event) {
           </table>
           <hr>
           <div class="align-items-end">
-            <a href="{% url 'personal' %}"><button type="button" class="btn btn-primary col-3">목록으로</button></a>
-            <a href="{% url 'personal_editForm' personalMatching.id %}"><button onclick="check()" type="button" class="btn btn-primary col-3">수정하기</button></a>
-            <a href="{% url 'personal_delete' personalMatching.id %}"><button onclick="return deletePC()" type="button" class="btn btn-primary col-3">삭제하기</button></a>
+            <a href="{% url 'personal_editForm' personalMatching.id %}"><button onclick="check()" type="button" class="btn btn-primary col-3">수정</button></a>
+            <a href="{% url 'personal_delete' personalMatching.id %}"><button onclick="return deletePC()" type="button" class="btn btn-primary col-3">삭제</button></a>
+            <a href="{% url 'personal' %}"><button type="button" class="btn btn-primary col-4">목록으로</button></a>
           </div>
     </div>
       
@@ -217,7 +218,7 @@ $(document).ready(function(event) {
 
   <!-- 댓글 목록 -->
   <div class="container">
-    {% for comment in comments %}
+    {% for comment in commentList %}
     <!-- 댓글 대댓글 전체 래핑 -->
     <div class="commentWrapper">
       <!-- 댓글 래퍼 -->
@@ -229,14 +230,14 @@ $(document).ready(function(event) {
             <img class="float-right" style="margin-left:10px; border-radius: 70px;" width="35px" height="35px" src="{{ comment.user.userimg.url }}">
             </a>
           </div>
-          <div id = "{{comment.id}}" class="col-sm-10 col-9">
+          <div id = "{{comment.id}}" class="col-sm-10 col-8">
             <h6 class="media-heading user_name">
             <strong>{{ comment.user }}</strong> 
             | {{comment.passedTime}}
             </h6>
             <h6>{{ comment.content }}</h6>
           </div>
-          <div class="btn-group col-1">
+          <div class="btn-group col-sm-1 col-2" style="z-index: 1000;">
             <button type="button" class="btn btn-light dropdown-toggle" style="color:white !important; border:none !important; background-color: white !important;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="far fa-caret-square-down" style="color: black !important;"></i>
             </button>
@@ -286,13 +287,13 @@ $(document).ready(function(event) {
     <div class="replyAll" id="test1">
       <!-- 답글쓰기 -->
       <div class="row writeReply" id = write>
-        <div class="col-md-1 col-3">
+        <div class="col-md-1 col-2">
             <i class="fas fa-arrow-alt-circle-right float-right" style="width:35px; height:35px; padding-top:10px;"></i>
         </div>
         <div class="col-1">
           <img class="float-right" style="border-radius: 70px;" width="30px" height="30px" src="{{ fnsuser.userimg.url }}">
         </div>
-        <div class="col-8" style="margin-left:0; padding-left:0; margin-right: 0; padding-right: 0;">
+        <div class="col-8 mx-0 px-0">
           <form method="post" action="{% url 'personalReply_write' %}" enctype="multipart/form-data">
             {% csrf_token %}
             <input type="hidden" name="personalMatching_id" value="{{ personalMatching.id }}">
@@ -325,7 +326,7 @@ $(document).ready(function(event) {
                 <img class="float-right" style="border-radius: 70px;" width="40px" height="40px" src="{{ reply.user.userimg.url }}">
               </a>
           </div>
-          <div class="col-md-9 col-7">
+          <div class="col-md-9 col-6">
             <h6 class="media-heading user_name">
             <strong>{{ reply.user }}</strong> 
             | {{reply.passedTime}}
@@ -349,7 +350,7 @@ $(document).ready(function(event) {
 
         <!-- replyEditForm -->
         <div class="row replyEditForm">
-          <div class="col-md-1 col-3">
+          <div class="col-md-1 col-2">
               <i class="fas fa-arrow-alt-circle-right float-right" style="width:35px; height:35px; padding-top:10px;"></i>
           </div>
           <div class="col-1">
@@ -387,6 +388,31 @@ $(document).ready(function(event) {
       <!--답글 끝  -->
     {% endfor %}
   </div>
+  <!-- 댓글 끝 -->
+  <!-- 댓글 페이지네이션 -->
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+    {% if commentList.has_previous %}
+    <li class="page-item">
+      <a class="page-link" href="?page=1" tabindex="-1" aria-disabled="true">처음으로</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="?page={{commentList.previous_page_number}}" tabindex="-1" aria-disabled="true">{{commentList.previous_page_number}}</a>
+    </li>
+    {% endif %}
+    
+    <li class="page-item disabled"><a class="page-link" href="#">{{commentList.number}}</a></li>
+    {% if commentList.has_next %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{commentList.next_page_number}}">{{commentList.next_page_number}}</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" href="?page={{commentList.paginator.num_pages}}">마지막으로</a>
+    </li>
+    {% endif %}
+  </ul>
+</nav>
+  <!-- 댓글 페이지네이션 끝 -->
     
 </div>
 <script type="text/javascript">
