--- a/match/templates/recruiting/recruiting.html
+++ b/match/templates/recruiting/recruiting.html
@@ -5,11 +5,11 @@
 <div class="recruiting">
   <div class="container">
     <div class="row align-items-center justify-content-center mt-5" style="height:100%;">
-      <img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px" style="vertical-align: middle;">
-      <span class="align-middle mt-2" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">용병모집</span>
+      <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-4" width="45px" style="vertical-align: middle;">
+      <span class="align-middle mt-2 text-stroke" style="font-family: 'Do Hyeon'; font-size: 45px; color:lightsalmon;">용병모집</span>
     </div>
     <div class="row align-items-center">
-      <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">축구 혹은 풋살 용병을 구합니다.</p>  
+      <p class="text-center col-12 float-center text-stroke" style="font-family: 'Noto Sans KR'; font-weight: bold; color:white; font-size: 20px;">축구 혹은 풋살 용병을 구합니다.</p>  
     </div>
   </div>
 </div>
@@ -32,15 +32,16 @@
 
 
 <div class="row mb-1">
+  {% if recruitingList %}
     {% for recruit in recruitingList %}
     <div class="col-md-6 col-12">
         <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-3 d-flex flex-column position-static mt-0">
             <div style="border-bottom: rgb(240, 148, 10) 1px solid;" class="row mb-2">
-              <div class="col-4">
+              <div class="col-md-4 col-6">
                 <strong class="d-inline-block mb-2 text-warning" style="font-size: 30px;">용병모집</strong>
               </div>
-              <div class="col-8">
+              <div class="col-md-8 col-6">
               {% autoescape on %}
               <span class="text-muted row" style="font-size: 14px;">
                 {{recruit.location}}
@@ -63,6 +64,23 @@
         </div>
       </div>
       {% endfor %}
+    {% else %}
+    <div class="col-12">
+        <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-3 d-flex flex-column position-static mt-0">
+            <div style="border-bottom: rgb(240, 148, 10) 1px solid;" class="row mb-2">
+              <div class="col-4">
+                <strong class="d-inline-block mb-2 text-warning" style="font-size: 30px;">용병모집</strong>
+              </div>
+            </div>
+            <h4 class="mb-2 font-weight-bold">
+              <span class="font-weight-bold">아직 용병모집 글이 없습니다.</span>
+            </h4>
+            <p class="card-text mb-auto">용병을 모집해보세요.</p>
+          </div>
+        </div>
+    </div>
+    {% endif %}
 </div>
 <hr>
 <nav aria-label="Page navigation example">
