--- a/match/templates/recruiting/recruiting_list.html
+++ b/match/templates/recruiting/recruiting_list.html
@@ -15,11 +15,11 @@ var i = 0;
 <div class="recruiting">
   <div class="container">
     <div class="row align-items-center justify-content-center mt-5" style="height:100%;">
-      <img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px" style="vertical-align: middle;">
-      <span class="align-middle mt-2" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">용병모집</span>
+      <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-4" width="45px" style="vertical-align: middle;">
+      <span class="align-middle mt-2 text-stroke" style="font-family: 'Do Hyeon'; font-size: 45px; color:lightsalmon;">용병모집</span>
     </div>
     <div class="row align-items-center">
-      <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">축구 혹은 풋살 용병을 구합니다.</p>  
+      <p class="text-center col-12 float-center text-stroke" style="font-family: 'Noto Sans KR'; font-weight: bold; color:white; font-size: 20px;">축구 혹은 풋살 용병을 구합니다.</p>  
     </div>
   </div>
 </div>
