--- a/match/templates/teamMatching/teamMatching.html
+++ b/match/templates/teamMatching/teamMatching.html
@@ -15,11 +15,11 @@ location.href = "{% url 'login' %}";
 <div class="teamMatching">
   <div class="container">
     <div class="row align-items-center justify-content-center mt-5" style="height:100%;">
-      <img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px" style="vertical-align: middle;">
-      <span class="align-middle mt-2" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">팀매칭</span>
+      <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-4" width="45px" style="vertical-align: middle;">
+      <span class="align-middle mt-2 text-stroke" style="font-family: 'Do Hyeon'; font-size: 45px; color:rgb(226, 211, 4);">팀매칭</span>
     </div>
     <div class="row align-items-center">
-      <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">축구 혹은 풋살의 상대팀을 구합니다.</p>  
+      <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:black; font-size: 20px; font-weight: bold;">축구 혹은 풋살을 같이 할 상대팀을 구합니다.</p>  
     </div>
   </div>
 </div>
@@ -43,15 +43,16 @@ location.href = "{% url 'login' %}";
 
 
 <div class="row mb-1">
+  {% if teamList %}
     {% for team in teamList %}
     <div class="col-md-6 col-12">
         <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
           <div class="col p-3 d-flex flex-column position-static mt-0">
             <div style="border-bottom: rgb(8, 139, 8) 1px solid;" class="row mb-2">
-              <div class="col-4">
+              <div class="col-md-4 col-6">
                 <strong class="d-inline-block mb-2 text-success" style="font-size: 30px;">팀매칭</strong>
               </div>
-              <div class="col-8">
+              <div class="col-md-8 col-6">
               {% autoescape on %}
               <span class="text-muted row" style="font-size: 14px;">
                 {{team.location}}
@@ -74,6 +75,23 @@ location.href = "{% url 'login' %}";
         </div>
       </div>
     {% endfor %}
+    {% else %}
+    <div class="col-12">
+        <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+          <div class="col p-3 d-flex flex-column position-static mt-0">
+            <div style="border-bottom: black 1px solid;" class="row mb-2">
+              <div class="col-4">
+                <strong class="d-inline-block mb-2 text-success" style="font-size: 30px;">팀매칭</strong>
+              </div>
+            </div>
+            <h4 class="mb-2 font-weight-bold">
+              <span class="font-weight-bold">아직 팀매칭 글이 없습니다.</span>
+            </h4>
+            <p class="card-text mb-auto">팀 매치글을 작성해 보세요..</p>
+          </div>
+        </div>
+    </div>
+    {% endif %}
 </div>
 <hr>
 <nav aria-label="Page navigation example">
