--- a/rank/templates/teamRank.html
+++ b/rank/templates/teamRank.html
@@ -5,11 +5,11 @@
 <div class="rank">
   <div class="container">
     <div class="row align-items-center justify-content-center mt-5" style="height:100%;">
-      <img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px" style="vertical-align: middle;">
+      <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-4" width="45px" style="vertical-align: middle;">
       <span class="align-middle mt-2" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">순위</span>
     </div>
     <div class="row align-items-center">
-      <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">학교 혹은 지역 내 순위를 확인할 수 있습니다.</p>  
+      <p class="text-center col-12 float-center text-stroke" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">학교 혹은 지역 내 순위를 확인할 수 있습니다.</p>  
     </div>
   </div>
 </div>
@@ -29,7 +29,7 @@
 </div>
 
 <div id = "scoreRank" class="mt-2">
-<table class="table">
+<table class="table tableControl">
     <thead class="thead-dark m-0 p-0">
         <tr>
         <th scope="col" class = "text-center m-0 p-md-2 p-0">순위</th>
