--- a/result/templates/result.html
+++ b/result/templates/result.html
@@ -16,11 +16,11 @@ alert("{{ message }}")
 <div class="result">
   <div class="container">
     <div class="row align-items-center justify-content-center mt-5" style="height:100%;">
-      <img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px" style="vertical-align: middle;">
+      <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-4" width="45px" style="vertical-align: middle;">
       <span class="align-middle mt-2" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">경기결과</span>
     </div>
     <div class="row align-items-center">
-      <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">
+      <p class="text-center col-12 float-center text-stroke" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">
         진행된 경기결과를 볼 수 있습니다. <br>결과를 입력해주세요!
       </p>  
     </div>
