--- a/team/templates/detail.html
+++ b/team/templates/detail.html
@@ -17,8 +17,8 @@ var i = 0;
 <div class="team">
   <div class="container">
     <div class="row align-items-center justify-content-center mt-5" style="height:100%;">
-      <img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px" style="vertical-align: middle;">
-      <span class="align-middle mt-2" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">팀 검색</span>
+      <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-4" width="45px" style="vertical-align: middle;">
+      <span class="align-middle mt-2 text-stroke" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">팀 검색</span>
     </div>
     <div class="row align-items-center">
       <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:black; font-size: 20px;">등록되어 있는 팀을 확인하고 가입신청 혹은 매치신청을 할 수 있습니다.</p>  
@@ -54,7 +54,7 @@ var i = 0;
     </div>
   </div>
 
-<table class="table mb-0">
+<table class="table mb-0 tableControl">
   <thead class="thead-dark">
     <tr class="row">
       <th scope="col" class="text-center col-1">#</th>
@@ -122,23 +122,24 @@ var i = 0;
 
   <div class="row justify-content-end mb-5 mt-3">
     {% if fnsuser == team.teamleader %}
-    <button class="btn btn-dark float-right" style="margin-right: 5px;" id = "changeBtn" role="button">팀 주장 변경</button>
-    <a class="btn btn-dark float-right" style="margin-right: 5px;" href="{% url 'applied_list' team.id %}" role="button">가입신청현황</a>
+    <button class="btn btn-dark float-right mb-2" style="margin-right: 5px;" id = "changeBtn" role="button">팀 주장 변경</button>
+    <a class="btn btn-dark float-right mb-2" style="margin-right: 5px;" href="{% url 'applied_list' team.id %}" role="button">가입신청현황</a>
+    <a class="btn btn-dark float-right mb-2" style="margin-right: 5px;" href="{% url 'editForm' team.id %}" role="button">팀 수정하기</a>
     {% endif %}
     {% if is_member %}
-    <a class="btn btn-dark float-right" style="margin-right: 5px;" href="{% url 'suggestList' team.id %}" role="button">매치신청현황</a>
-    <a class="btn btn-dark float-right" style="margin-right: 5px;" href="{% url 'dropout' team.id %}" role="button">팀탈퇴하기</a>
+    <a class="btn btn-dark float-right mb-2" style="margin-right: 5px;" href="{% url 'suggestList' team.id %}" role="button">매치신청현황</a>
+    <a class="btn btn-dark float-right mb-2" style="margin-right: 5px;" href="{% url 'dropout' team.id %}" role="button">팀탈퇴하기</a>
     {% elif is_applied %}
-    <a class="btn btn-dark float-right" style="margin-right: 5px;" href="{% url 'cancelApplication' team.id %}" role="button">가입신청취소</a>
+    <a class="btn btn-dark float-right mb-2" style="margin-right: 5px;" href="{% url 'cancelApplication' team.id %}" role="button">가입신청취소</a>
     {% else %}
       {% if fnsuser.teamname %}
-        <a class="btn btn-dark float-right" style="margin-right: 5px;" href="{% url 'suggestTeamMatching' team.id %}" role="button">매치신청</a>
+        <a class="btn btn-dark float-right mb-2" style="margin-right: 5px;" href="{% url 'suggestTeamMatching' team.id %}" role="button">매치신청</a>
       {% else %}
-        <a class="btn btn-dark float-right" style="margin-right: 5px;" href="{% url 'application' team.id %}" role="button">팀가입신청</a>
+        <a class="btn btn-dark float-right mb-2" style="margin-right: 5px;" href="{% url 'application' team.id %}" role="button">팀가입신청</a>
       {% endif %}
     
     {% endif %}
-    <a class="btn btn-dark float-right" href="{% url 'team' %}" role="button">목록가기</a>
+    <a class="btn btn-dark float-right mb-2" href="{% url 'team' %}" role="button">목록가기</a>
   </div>
 </div>
 
