--- a/team/templates/suggestDetail.html
+++ b/team/templates/suggestDetail.html
@@ -22,8 +22,8 @@ alert('{{message}}');
 <div class="team">
   <div class="container">
     <div class="row align-items-center justify-content-center mt-5" style="height:100%;">
-      <img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px" style="vertical-align: middle;">
-      <span class="align-middle mt-2" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">팀 검색</span>
+      <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-4" width="45px" style="vertical-align: middle;">
+      <span class="align-middle mt-2 text-stroke" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">팀 검색</span>
     </div>
     <div class="row align-items-center">
       <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:black; font-size: 20px;">등록되어 있는 팀을 확인하고 가입신청 혹은 매치신청을 할 수 있습니다.</p>  
@@ -67,7 +67,7 @@ alert('{{message}}');
             <tr class="row">
                 <th scope="row" class="col-4">매치신청팀</th>
                 <td style="text-align: left;" class="col-8">
-                {{teamMatching.myteam}}    
+                <a class="text-decoration-none" style="color:blue;" href="{% url 'detail' teamMatching.myteam.id %}"><b>{{teamMatching.myteam}}</b></a>    
                 </td>
             </tr>
             <tr class="row">
