--- a/team/templates/suggestTeamMatching.html
+++ b/team/templates/suggestTeamMatching.html
@@ -4,6 +4,16 @@
 
 <script language="javascript">
     function formCheck(frm){
+            var today = new Date()
+            var year = today.getFullYear();
+            var month = today.getMonth() +1;
+            var date = today.getDate();
+            var hour = today.getHours();
+            var matchDay = frm.time_from.value;
+            var matchYear = matchDay.substring(0,4);
+            var matchMonth = matchDay.substring(5,7);
+            var matchDate = matchDay.substring(8,10);
+            var matchHour = matchDay.substring(11,13);
            if(frm.title.value == ""){
                alert("제목을 입력해주세요");
                frm.title.focus();
@@ -19,14 +29,36 @@
                frm.time_from.focus();
                return false;
            }
+           if(Number(matchYear) < year){
+                    alert("현재시간보다 이전 시간을 선택하실 수 없습니다.")
+                    frm.time_from.focus();
+                    return false;
+            }
+            else{
+                if(Number(matchMonth) < month){
+                    alert("현재시간보다 이전 시간을 선택하실 수 없습니다.")
+                    frm.time_from.focus();
+                    return false;
+                }
+                else{ 
+                    if(Number(matchDate) < date){
+                        alert("현재시간보다 이전 시간을 선택하실 수 없습니다.")
+                        frm.time_from.focus();
+                        return false;
+                    }
+                    else if(Number(matchDate) == date){
+                        if(Number(matchHour) <= hour){
+                            alert("matchhour :" + matchHour + "hour :" + hour);
+                            alert("현재시간보다 이전 시간을 선택하실 수 없습니다.")
+                            frm.time_from.focus();
+                            return false;
+                        }
+                    } 
+                }
+            }
            if (frm.time_to.value == ""){
                alert("종료시간을 입력해주세요");
                frm.time_to.focus();
-               return false;
-           }
-           if(frm.rank.value == "상대팀의 원하시는 실력을 선택하세요."){
-               alert("상대팀 실력을 선택해주세요.");
-               frm.rank.focus();
                return false;
            }
            if(frm.content.value == ""){
@@ -49,8 +81,8 @@ location.href = "{% url 'team' %}";
 <div class="team">
   <div class="container">
     <div class="row align-items-center justify-content-center mt-5" style="height:100%;">
-      <img src="{% static 'logo_korean.png' %}" alt="logo" class="src mr-4" width="170px" style="vertical-align: middle;">
-      <span class="align-middle mt-2" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">팀매칭</span>
+      <img src="{% static 'onlyLogo.png' %}" alt="logo" class="src mr-4" width="45px" style="vertical-align: middle;">
+      <span class="align-middle mt-2 text-stroke" style="font-family: 'Do Hyeon'; font-size: 45px; color:blanchedalmond;">팀매칭</span>
     </div>
     <div class="row align-items-center">
       <p class="text-center col-12 float-center" style="font-family: 'Noto Sans KR'; color:white; font-size: 20px;">축구 혹은 풋살의 상대팀을 구합니다.</p>  
@@ -69,6 +101,8 @@ location.href = "{% url 'team' %}";
 <hr>
 
 <div class="container">
+        <h2 class="ml-4">매치신청</h2>
+        <hr>
 <div style="border:1px solid lightgray; border-radius: 10px; padding: 30px;">
     <form action="{% url 'suggestTeamMatching' team_id %}" method="POST" onsubmit="return formCheck(this);">
         {% csrf_token %}
@@ -94,11 +128,11 @@ location.href = "{% url 'team' %}";
         <div class="form-group row">
             <label class="col-lg-2 col-sm-12 col-form-label" for="time_from">시작시간</label>
             <div class="col-lg-3 col-sm-12">
-            <input id="time_from" name = "time_from" class="form-control" type="text">
+            <input id="time_from" name = "time_from" class="form-control" type="text" autocomplete="off" readonly>
             </div>
             <label class="col-lg-2 col-sm-12 col-form-label" for="time_to">종료시간</label>
             <div class="col-lg-3 col-sm-12">
-            <input id="time_to" name = "time_to" type="text" class="form-control">
+            <input id="time_to" name = "time_to" type="text" class="form-control" autocomplete="off" readonly>
             </div>
         </div>
 
